<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="applicationLabel">Contacts</string>
    <string name="launcherActivityLabel">Contacts</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">People</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactInsertOrEditActivityTitle">New contact</string>
    <string name="contactPickerActivityTitle">Choose a contact</string>
    <string name="header_entry_contact_list_adapter_header_title">Create new contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Find contacts</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="description_action_menu_remove_star">Removed from favorites</string>
    <string name="description_action_menu_add_star">Added to favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete contact</string>
    <string name="menu_create_contact_shortcut">Create Shortcut</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete group</string>
    <string name="menu_new_contact_action_bar">New Contact</string>
    <string name="menu_new_group_action_bar">New Group</string>
    <string name="splitConfirmation_title">Separate contact?</string>
    <string name="splitConfirmation">This contact will be separated into multiple contacts.</string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to join with <xliff:g id="name">%s</xliff:g>:</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">You can\'t delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Delete this entry from the call log.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_discard">Discard changes</string>
    <string name="invalidContactMessage">The contact doesn\'t exist.</string>
    <string name="createContactShortcutSuccessful">Contact widget added to Home screen.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="photoPickerNotFoundText" product="default">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts.</string>
    <string name="noGroups">No groups.</string>
    <string name="noAccounts">To create groups you need an account.</string>
    <string name="emptyGroup">No people in this group.</string>
    <string name="addPeopleToGroup">To add some, edit the group.</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactSavedErrorToast">Couldn\'t save contact changes.</string>
    <string name="groupSavedToast">Group saved.</string>
    <string name="groupSavedErrorToast">Couldn\'t save group changes.</string>
    <plurals name="listTotalPhoneContacts">
        <item quantity="one">1 contact with phone number</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts with phone numbers</item>
    </plurals>
    <string name="listTotalPhoneContactsZero">No contacts with phone numbers</string>
    <plurals name="listFoundAllContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="listFoundAllContactsZero">No matching results</string>
    <plurals name="searchFoundContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="dial_tab_label">Dialer</string>
    <string name="all_contacts_tab_label">Contacts</string>
    <string name="mms_tab_label">Messaging</string>
    <string name="favorites_tab_label">Favorites</string>
    <string name="callBack">Call back</string>
    <string name="callAgain">Call again</string>
    <string name="returnCall">Return call</string>
    <string name="add_contact_dlg_message_fmt">Add \"<xliff:g id="email">%s</xliff:g>\" to contacts?</string>
    <string name="description_contact_photo">contact photo</string>
    <string name="description_plus_button">plus</string>
    <string name="exporting_contact_list_progress"><xliff:g id="current_number">%s</xliff:g> of <xliff:g id="total_number">%s</xliff:g> contacts</string>
    <string name="search_settings_description">Names of your contacts</string>
    <string name="quickcontact_missing_app">No app was found to handle this action.</string>
    <string name="quickcontact_transparent_view_description">Click to return to previous screen</string>
    <string name="quickcontact_add_phone_number">Add phone number</string>
    <string name="quickcontact_add_email">Add email</string>
    <string name="missing_app">No app was found to handle this action.</string>
    <string name="menu_share">Share contacts</string>
    <string name="menu_add_contact">Add to contacts</string>
    <string name="share_via">Share contact</string>
    <string name="dialog_new_group_account">Create group under account</string>
    <string name="audio_chat">Voice chat</string>
    <string name="video_chat">Video chat</string>
    <string name="connections">Connections</string>
    <string name="add_connection_button">Add connection</string>
    <string name="recent" msgid="2062236709538790412">Recent</string>
    <string name="recent_updates" msgid="2018245636796411442">Recent updates</string>
    <string name="account_type_format"><xliff:g id="source" example="Gmail">%1$s</xliff:g> contact</string>
    <string name="from_account_format" translatable="false"><xliff:g id="source" example="user@gmail.com">%1$s</xliff:g></string>
    <string name="contact_read_only">Not editable from this app.</string>
    <string name="group_read_only">Not editable on this device.</string>
    <string name="take_photo">Take photo</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="pick_photo">Choose photo</string>
    <string name="pick_new_photo">Select new photo</string>
    <string name="locale_change_in_progress">Contact list is being updated to reflect the change of language.</string>
    <string name="upgrade_in_progress">Contact list is being updated.</string>
    <string name="upgrade_out_of_memory">Contacts are in the process of being upgraded.
    \n\nThe upgrade process requires approximately <xliff:g id="size_in_megabytes">%s</xliff:g>
    MB of internal storage.\n\nChoose one of the following options:</string>
    <string name="upgrade_out_of_memory_uninstall">Uninstall some applications</string>
    <string name="upgrade_out_of_memory_retry">Retry upgrade</string>
    <string name="search_results_searching">Searching\u2026</string>
    <string name="menu_display_selected">"Show selected"</string>
    <string name="menu_display_all">"Show all"</string>
    <string name="same_name_join_hint"><li>Click start to join contacts with same display name.</li>\n<li>Click cancel to stop aggregation in process.</li>\n<li>The process takes time, please be patient.</li></string>
    <string name="join_action_start">Start</string>
    <string name="join_title_total">Total</string>
    <string name="join_title_single">Current</string>
    <string name="call_type_hw">View by</string>
    <string name="cancel_hw">"cancel"</string>
    <string name="confirm_hw">"confirm"</string>
    <string name="sim_log_hw">sim log</string>
    <string name="sim_all_hw">sim one and two</string>
    <string name="sim_one_hw">sim one</string>
    <string name="sim_two_hw">sim two</string>
    <string name="call_type">call type</string>
    <string name="all_call_hw">all call</string>
    <string name="miss_call_hw">miss call</string>
    <string name="answer_call_hw">answer call</string>
    <string name="dialer_call_hw">dialer call</string>
    <string name="menu_add_to_black_list">Add to blacklist</string>
    <string name="menu_remove_from_black_list">Remove from blacklist</string>
    <string name="menu_send_number">Send number</string>
    <string name="menu_delete_call_log">Delete entry</string>
    <string name="menu_copy_number">Copy number</string>
    <string name="sar_mobile_phone_heading">Huawei Mobile Phone</string>
    <string name="sar_mobile_phone_review">Specific Absorption Rate information</string>
    <string name="sar_mobile_phone_contents">This device meets guidelines for exposure to radio waves.Your device is a low-power radio transmitter and receiver. As recommended by international guidelines, the device is designed not to exceed the limits for exposure to radio waves.These guidelines were developed by the independent scientific organization International Commission on Non-Ionizing Radiation Protection (ICNIRP) and include safety measures designed to ensure safety for all users, regardless of age and health.\n\nThe SAR limit adopted by India is 0.0016 watts/gram (W/g) averaged over one gram of tissue. The highest SAR value for this device is 0.0010 W/g.</string>
    <string name="contacts_setting_Advanced">Advanced</string>
    <string name="merge_duplicate_contacts">Merge duplicate contacts</string>
    <string name="set_up_my_profile">Set up my profile</string>
    <string name="mem_status">Memory status</string>
   <string name="menu_copyContactsToCard1">Copy To Card1</string>
    <string name="menu_copyContactsToCard2">Copy To Card2</string>
    <string name="menu_copyContactsToPhone">Copy To Phone</string>
</resources>