<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Icon and titles are set in code for menu_star and menu_edit -->

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/share_contact"
        android:title="@string/menu_share"
        android:showAsAction="always"
        android:alphabeticShortcut="s" />
    <item
        android:id="@+id/menu_star"
        android:showAsAction="always" />

    <!-- M: as planner's design,hotknot will show always, edit will hide in the floating menu -->
    <item
        android:id="@+id/menu_hotknot"
        android:title="@string/hotknot"
        android:showAsAction="always" />

    <item
        android:id="@+id/menu_edit"
        android:title="@string/menu_editContact" />

    <item
        android:id="@+id/menu_add_to_blacklist"
        android:title="@string/menu_add_to_black_list" />

    <item
        android:id="@+id/menu_remove_from_blacklist"
        android:title="@string/menu_remove_from_black_list" />

    <item
        android:id="@+id/menu_send_number"
        android:title="@string/menu_send_number"/>

    <item
        android:id="@+id/menu_copy_number"
        android:title="@string/menu_copy_number"/>

    <item
        android:id="@+id/menu_create_contact_shortcut"
        android:title="@string/menu_create_contact_shortcut" />

    <item
        android:id="@+id/menu_delete_call_log"
        android:title="@string/menu_delete_call_log"/>
    
    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_deleteContact"/>
    
    <item
        android:id="@+id/menu_copyContactsToCard1"
        android:title="@string/menu_copyContactsToCard1"/>
    <item
        android:id="@+id/menu_copyContactsToCard2"
        android:title="@string/menu_copyContactsToCard2"/>
    <item
        android:id="@+id/menu_copyContactsToPhone"
        android:title="@string/menu_copyContactsToPhone"/>

</menu>
