<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="8dp" 
    android:background="#ffffff">
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/call_type_hw"
                android:textSize="16dp"
  		android:textColor="#000000"
                />
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sim_log_hw"
                android:background="#808080"
                />
            <RadioGroup
                android:id="@+id/sim_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioButton 
                    android:id="@+id/sim_all"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sim_all_hw"
                    android:checked="true"
                    />
                <RadioButton 
                    android:id="@+id/sim_one"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sim_one_hw"
                    />
                <RadioButton 
                    android:id="@+id/sim_two"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sim_two_hw"
                    />
            </RadioGroup>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_type"
                 android:background="#808080"
                />
            <RadioGroup
                android:id="@+id/call_type_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioButton 
                    android:id="@+id/all_call"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_call_hw"
                    android:checked="true"
                    />
                <RadioButton 
                    android:id="@+id/miss_call"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/miss_call_hw"
                    />
                <RadioButton 
                    android:id="@+id/answer_call"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_call_hw"
                    />
                <RadioButton 
                    android:id="@+id/dialer_call"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialer_call_hw"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button 
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_hw"
                />
            <Button 
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_hw"
                />
        </LinearLayout>
        </LinearLayout>
        </ScrollView>
</LinearLayout>

