<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textColor="#938192"
     android:orientation="vertical" >

     <TextView  
        android:id="@+id/sar_text_heading"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content" 
        android:layout_gravity="center" 
        android:layout_marginTop="20dp" 
        android:textSize="22dp" 
        android:textStyle="bold" 
        android:textColor="#000000"
        android:text="@string/sar_mobile_phone_heading" />  

     <TextView  
        android:id="@+id/sar_text_review"  
        android:gravity="left"
        android:layout_gravity="center" 
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"   
        android:textSize="20dp" 
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:text="@string/sar_mobile_phone_review" /> 

     <TextView  
        android:id="@+id/sar_text_contents"  
        android:gravity="left"
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"   
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp" 
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/sar_mobile_phone_contents" /> 

</LinearLayout>
